@@ -1,0 +1,18 @@
+# Generated by Django 3.2.20 on 2023-11-15 15:04
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('registrations', '0020_auto_20231009_1802'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='bill',
+            name='payment_method',
+            field=models.CharField(blank=True, choices=[('iban', 'Later with wire transfer'), ('datatrans', 'immediate with credit card (datatrans)'), ('postfinance', 'immediate with credit card (postfinance)'), ('external', 'External invoice')], max_length=20, verbose_name='Payment method'),
+        ),
+    ]
