@@ -238,6 +238,7 @@ KEPCHUP_NO_PAYMENT = False
 KEPCHUP_DISPLAY_FREE_WHEN_PRICE_IS_0 = False
 # wire_transfer, datatrans or none
 KEPCHUP_PAYMENT_METHOD = "postfinance"
+KEPCHUP_ALTERNATIVE_PAYMENT_METHODS_FROM_BACKEND = ["external"]
 KEPCHUP_USE_DIFFERENTIATED_PRICES = True
 KEPCHUP_LOCAL_ZIPCODES = ["1814", "1272"]
 KEPCHUP_PREFILL_YEARS_WITH_TEACHERS = False
