@@ -41,6 +41,8 @@ KEPCHUP_SEND_PRESENCE_LIST = True
 KEPCHUP_SEND_COPY_CONTACT_MAIL_TO_ADMIN = True
 KEPCHUP_NO_PAYMENT = False
 KEPCHUP_PAYMENT_METHOD = "postfinance"
+KEPCHUP_ALTERNATIVE_PAYMENT_METHODS_FROM_BACKEND = ["external"]
+
 KEPCHUP_NO_TERMS = False
 KEPCHUP_NO_SSF = True
 KEPCHUP_CHILD_SCHOOL = True
